--- a/templates/debug.html
+++ b/templates/debug.html
@@ -80,7 +80,7 @@
                         'Content-Type': 'application/json'
                     },
                     body: JSON.stringify({
-                        source_id: parseInt(sourceId),
+                        source_id: sourceId,
                         book_url: bookUrl
                     })
                 });
