--- a/templates/base.html
+++ b/templates/base.html
@@ -31,10 +31,13 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#" onclick="showSourceModal()">书源管理</a>
                     </li>
+                    <li class="nav-item d-none" id="adminNav">
+                        <a class="nav-link" href="/users">用户管理</a>
+                    </li>
                 </ul>
                 <ul class="navbar-nav">
                     <li class="nav-item" id="loginNav">
-                        <a class="nav-link" href="#" onclick="showLoginModal()">登录</a>
+                        <a class="nav-link" href="/auth">登录</a>
                     </li>
                     <li class="nav-item d-none" id="userNav">
                         <div class="dropdown">
@@ -70,19 +73,60 @@
                 <div class="modal-body">
                     <form id="loginForm">
                         <div class="mb-3">
-                            <label for="username" class="form-label">用户名</label>
-                            <input type="text" class="form-control" id="username" required>
+                            <label for="loginUsername" class="form-label">用户名</label>
+                            <input type="text" class="form-control" id="loginUsername" required>
                         </div>
                         <div class="mb-3">
-                            <label for="password" class="form-label">密码</label>
-                            <input type="password" class="form-control" id="password" required>
+                            <label for="loginPassword" class="form-label">密码</label>
+                            <input type="password" class="form-control" id="loginPassword" required>
                         </div>
+                        <div id="loginError" class="alert alert-danger d-none"></div>
                     </form>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">取消</button>
-                    <button type="button" class="btn btn-primary" onclick="login()">登录</button>
+                    <button type="button" class="btn btn-primary" onclick="login()" id="loginBtn">登录</button>
                     <button type="button" class="btn btn-link" onclick="showRegisterModal()">注册账号</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- 注册模态框 -->
+    <div class="modal fade" id="registerModal" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">用户注册</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="registerForm">
+                        <div class="mb-3">
+                            <label for="registerUsername" class="form-label">用户名</label>
+                            <input type="text" class="form-control" id="registerUsername" required>
+                            <div class="form-text">用户名长度3-20个字符，只能包含字母、数字和下划线</div>
+                        </div>
+                        <div class="mb-3">
+                            <label for="registerEmail" class="form-label">邮箱</label>
+                            <input type="email" class="form-control" id="registerEmail" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="registerPassword" class="form-label">密码</label>
+                            <input type="password" class="form-control" id="registerPassword" required>
+                            <div class="form-text">密码长度至少6个字符</div>
+                        </div>
+                        <div class="mb-3">
+                            <label for="confirmPassword" class="form-label">确认密码</label>
+                            <input type="password" class="form-control" id="confirmPassword" required>
+                        </div>
+                        <div id="registerError" class="alert alert-danger d-none"></div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">取消</button>
+                    <button type="button" class="btn btn-primary" onclick="register()" id="registerBtn">注册</button>
+                    <button type="button" class="btn btn-link" onclick="showLoginModal()">已有账号？登录</button>
                 </div>
             </div>
         </div>
